app prepared for deployment

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 MONGO_URI = mongodb+srv://yxsh:Qwerty12345@portfolio-apps.zrui0.mongodb.net/Dictionary?retryWrites=true&w=majority
-NODE_ENV = DEVELOPMENT
+NODE_ENV = PRODUCTION
 APP_ID = bcaf8efc
 APP_KEY = 618b27037638657d1975dc8ee9591215
 OXFORD_API_URL = https://od-api.oxforddictionaries.com:443/api/v2/entries/en-gb
