--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"express-validator": "^6.8.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.11.7",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"node-fetch": "^2.6.1"
 	}
 }
