app prepared for deployment

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI = MONGO_URI
+MONGO_URI = mongodb+srv://yxsh:Qwerty12345@portfolio-apps.zrui0.mongodb.net/Dictionary?retryWrites=true&w=majority
 NODE_ENV = PRODUCTION
 APP_ID = bcaf8efc
 APP_KEY = 618b27037638657d1975dc8ee9591215
